--- a/Titanic Tableau Story/P6_Project.html
+++ b/Titanic Tableau Story/P6_Project.html
@@ -11762,13 +11762,13 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="1.-Links:">1. Links:<a class="anchor-link" href="#1.-Links:">&#182;</a></h2><ol>
-<li><p><a href="https://dub01.online.tableau.com/#/site/dalal/views/Titanic_v1/TitanicHowToSurvived?:iid=1">The first version of my story</a></p>
+<li><p><a href="https://public.tableau.com/views/Titanic_final/TitanicHowToSurvived?:embed=y&:display_count=yes">The first version of my story</a></p>
 </li>
-<li><p><a href="https://dub01.online.tableau.com/#/site/dalal/views/Titanic_final/TitanicHowToSurvived?:iid=1">The final version of my story</a></p>
+<li><p><a href="https://public.tableau.com/views/Titanic_final/TitanicHowToSurvived?:embed=y&:display_count=yes">The final version of my story</a></p>
 </li>
 </ol>
-<p><strong>Username:</strong> titanic@ipdeer.com<br>
-<strong>Password:</strong> abcd1234</p>
+<p><strong> </strong>  <br>
+<strong> :</strong>  </p>
 
 </div>
 </div>
